--- a/index.html
+++ b/index.html
@@ -22,95 +22,86 @@
         <img class="small-photo" src="Profile_picture.jpg" alt="">
         <h3>Intro</h3>
         <p>
-          
+
         </p>
       </div>
     </div> <!-- end intro .container -->
 
-    <div class="container"> <!-- start 2nd .container -->
-    <div class="row">
-      <div class="col-sm-6">
-        <h3>Pass Projects</h3>
-        <p>
-        </p>
-        <ul>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-        </ul>
-      </div>
+    <div class="container"> <!-- start information .container -->
+      <div class="row"> <!-- start 1st textbox -->
+        <div class="col-sm-4">
+          <h3>Pass Projects</h3>
+          <p>
+          </p>
+          <ul>
+            <a href=""></a>
+            <a href=""></a>
+          </ul>
+        </div>
 
-      <div class="col-sm-6">
-        <h3>Next Projects</h3>
-        <p>
-        </p>
-      </div>
-    </div>
-    <hr>
+        <div class="col-sm-4">
+          <h3>Current Projects</h3>
+          <p>
+          </p>
+        </div>
 
-    <div>
-      <h3>About</h3>
-    </div>
+        <div class="col-sm-4">
+          <h3>Next Projects</h3>
+          <p>
+          </p>
+        </div>
+      </div> <!-- end 1st textbox -->
 
-    <div class="row">
-      <div class="col-sm-3">
-        <h4>Education</h4>
-        <ul>
-          <li>Mechanical Enigineering, B.E.</li>
-          <li>Engineering &amp Technology Management, M.S.</li>
-          <li>New Product Development, Cert.</li>
-          <li>Project Management, Cert.</li>
-        </ul>
-        <p><a href="https://www.linkedin.com/in/inthrayuth-mahaphol-657a5840?trk=nav_responsive_tab_profile_pic">More...</a></p>
-      </div>
+      <hr>
 
-      <div class="col-sm-3">
-        <h4>Work Experience</h4>
-        <ul>
-          <li>Product Development Analyse</li>
-          <li>After Marketing</li>
-          <li>Pricing Analyse</li>
-        </ul>
-      </div>
+      <div> <!-- start 2nd textbox -->
+        <h3>About</h3>
+      </div> <!-- start 2nd textbox -->
 
-      <div class="col-sm-3">
-        <h4>Social Activities</h4>
-        <ul>
-          <li>Viking Motorsports</li>
-          <li><a href="https://www.informs.org/Community/Omega-Rho-R">Omega Club</a></li>
-          <li><a href="https://www.facebook.com/psu.tso/">Thai Student Organization</a></li>
-        </ul>
-      </div>
+      <div class="row"> <!-- start 3rd textbox -->
+        <div class="col-sm-4">
+          <h4>Education</h4>
+          <ul>
+            <li>Mechanical Enigineering, B.E.</li>
+            <li>Engineering &amp Technology Management, M.S.</li>
+            <li>New Product Development, Cert.</li>
+            <li>Project Management, Cert.</li>
+          </ul>
+          <p><a href="https://www.linkedin.com/in/inthrayuth-mahaphol-657a5840?trk=nav_responsive_tab_profile_pic">More...</a></p>
+        </div>
 
-      <div class="col-sm-3">
-        <h4>Interested</h4>
+        <div class="col-sm-4">
+          <h4>Work Experience</h4>
+          <ul>
+            <li>Product Development Analyse</li>
+            <li>After Marketing</li>
+            <li>Pricing Analyse</li>
+          </ul>
+        </div>
+
+        <div class="col-sm-4">
+          <h4>Social Activities</h4>
+          <ul>
+            <li>Viking Motorsports</li>
+            <li><a href="https://www.informs.org/Community/Omega-Rho-R">Omega Club</a></li>
+            <li><a href="https://www.facebook.com/psu.tso/">Thai Student Organization</a></li>
+          </ul>
+        </div>
+      </div> <!-- end 3rd textbox -->
+
+      <div> <!-- start 4th textbox -->
+        <h4>Like</h4>
         <ul>
           <li>Photography</li>
           <li>Bicycle Builder</li>
           <li>Metal Engraving</li>
         </ul>
-      </div>
+      </div> <!-- end 4th textbox -->
 
-    </div>
+    </div> <!-- end information .container -->
+
     <hr>
-    <center><p>Copyright (c) 2016 Inthrayuth M.</p></center>
-  </div> <!-- end 2nd .container -->
 
+    <center><p>Copyright (c) 2016 Inthrayuth M.</p></center>
   </body>
 </html>
