--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div class="container"> <!-- start intro .container -->
       <div class="jumbotron">
-        <img class="small-photo" src="Profile_picture.jpg" alt="">
-        <h3>Intro</h3>
+        <img class="sm-photo" src="Profile_picture.jpg" alt="">
+        <h3>Educator</h3>
         <p>
-
+          I specialize in Project Management in seminar to corporate conference and behind the scenes of related events. In the past few years I had the pleasure to work with many key people from many countries in the technology field like Mr.Ohashi, Dr.Bullinger, Dr.Atalay, Dr.Steele, Dr.Brockhoff, Dr.Utterback, and many others.
         </p>
       </div>
     </div> <!-- end intro .container -->
@@ -31,24 +31,34 @@
       <div class="row"> <!-- start 1st textbox -->
         <div class="col-sm-4">
           <h3>Pass Projects</h3>
-          <p>
-          </p>
           <ul>
-            <a href=""></a>
-            <a href=""></a>
+            <li><a href="http://github.com/inthra/w1wed-cupcake/blob/master/cupcake.html">Cupcake</a></li>
+            <li><a href="http://github.com/inthra/w1wed-boring/blob/master/boring-lecture.html">Lecture</a></li>
+            <li><a href="http://github.com/inthra/w1wed-interior-decorator/blob/master/interior.html">Decorator</a></li>
+            <li><a href="http://github.com/inthra/w1wed-animal/blob/master/animal.html">Animal Adoption</a></li>
+            <li><a href="http://github.com/inthra/w1thurs-vacation/blob/master/index.html">Viva Vacation</a></li>
           </ul>
         </div>
 
         <div class="col-sm-4">
           <h3>Current Projects</h3>
-          <p>
-          </p>
+          <p>Working on developer skills</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Java Script</li>
+          </ol>
         </div>
 
         <div class="col-sm-4">
-          <h3>Next Projects</h3>
-          <p>
-          </p>
+          <h3>Future Projects</h3>
+          <ol>
+            <li>Java</li>
+            <li>Android</li>
+            <li>PHP</li>
+            <li>Titanium Bicycle Frame Builer</li>
+            <li>Metal Engraving</li>
+          </ol>
         </div>
       </div> <!-- end 1st textbox -->
 
@@ -67,7 +77,7 @@
             <li>New Product Development, Cert.</li>
             <li>Project Management, Cert.</li>
           </ul>
-          <p><a href="https://www.linkedin.com/in/inthrayuth-mahaphol-657a5840?trk=nav_responsive_tab_profile_pic">More...</a></p>
+          <p><a href="https://www.linkedin.com/in/inthrayuth-mahaphol-657a5840">More...</a></p>
         </div>
 
         <div class="col-sm-4">
