edited textbox with description

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="container"> <!-- start intro .container -->
       <div class="jumbotron">
         <img class="sm-photo" src="Profile_picture.jpg" alt="">
-        <h3>Educator</h3>
+        <h3>Researcher</h3>
         <p>
-          I specialize in Project Management in seminar to corporate conference and behind the scenes of related events. In the past few years I had the pleasure to work with many key people from many countries in the technology field like Mr.Ohashi, Dr.Bullinger, Dr.Atalay, Dr.Steele, Dr.Brockhoff, Dr.Utterback, and many others.
+          I specialize in <span><a href="http://www.pdx.edu/engineering-technology-management/graduate-certificate-project-management">Project Management</a><span> and behind the scenes of related fields. In the past few years I had the pleasure to work with many key people from many countries in engineering and technology fields like Dr.Jetter, Dr.Sperry, Dr.Freiling, Dr.Khormaei, Mr.Shmueli, Mr.Busch, and many others.
         </p>
       </div>
     </div> <!-- end intro .container -->
@@ -30,13 +30,23 @@
     <div class="container"> <!-- start information .container -->
       <div class="row"> <!-- start 1st textbox -->
         <div class="col-sm-4">
-          <h3>Pass Projects</h3>
+          <h3>HTML &amp CSS Projects</h3>
           <ul>
-            <li><a href="http://github.com/inthra/w1wed-cupcake/blob/master/cupcake.html">Cupcake</a></li>
-            <li><a href="http://github.com/inthra/w1wed-boring/blob/master/boring-lecture.html">Lecture</a></li>
-            <li><a href="http://github.com/inthra/w1wed-interior-decorator/blob/master/interior.html">Decorator</a></li>
-            <li><a href="http://github.com/inthra/w1wed-animal/blob/master/animal.html">Animal Adoption</a></li>
-            <li><a href="http://github.com/inthra/w1thurs-vacation/blob/master/index.html">Viva Vacation</a></li>
+            <li><a href="http://github.com/inthra/w1wed-cupcake/blob/master/cupcake.html">Cupcake</a>
+              <p>Using basic html to develop webpage for a Cupcake Shop</p>
+            </li>
+            <li><a href="http://github.com/inthra/w1wed-boring/blob/master/boring-lecture.html">Lecture</a>
+              <p>Developing CSS by using Class</p>
+            </li>
+            <li><a href="http://github.com/inthra/w1wed-interior-decorator/blob/master/interior.html">Decorator</a>
+              <p>Class "column" can help styling and fast editing</p>
+            </li>
+            <li><a href="http://github.com/inthra/w1wed-animal/blob/master/animal.html">Animal Adoption</a>
+              <p>Class can be designed to very specific tag</p>
+              </li>
+            <li><a href="http://github.com/inthra/w1thurs-vacation/blob/master/index.html">Viva Vacation</a>
+              <p>Bootstrap can be used for improving styling</p>
+            </li>
           </ul>
         </div>
 
@@ -52,12 +62,12 @@
 
         <div class="col-sm-4">
           <h3>Future Projects</h3>
+          <p>Would like to know</p>
           <ol>
             <li>Java</li>
             <li>Android</li>
             <li>PHP</li>
-            <li>Titanium Bicycle Frame Builer</li>
-            <li>Metal Engraving</li>
+            <li>R</li>
           </ol>
         </div>
       </div> <!-- end 1st textbox -->
@@ -66,6 +76,7 @@
 
       <div> <!-- start 2nd textbox -->
         <h3>About</h3>
+        <p>Currently, I am interested in programming classes such as HTML, Java, Java Script, and R. These set of skills will help me develop my own research fuzzy front-end mapping webpage for collecting data and analysing mapping in statistical data.</p>
       </div> <!-- start 2nd textbox -->
 
       <div class="row"> <!-- start 3rd textbox -->
