modified text and clsss,and  add pictures

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 
   <body>
     <div class="container"> <!-- start header -->
-      <header class="page-header">
+        <img class="xs-photo" src="logo.jpg" alt="Profile photo">
         <ul class="nav nav-pills pull-right">
           <li><a href="#"><strong>Work</strong></a></li>
           <li><a href="mailto:zign.int@gmail.com"><strong>Contact</strong></a></li>
         </ul>
-        <h2>Inthrayuth Mahaphol</h2>
-      </header>
     </div> <!-- end header -->
 
     <div class="container"> <!-- start intro .container -->
       <div class="jumbotron">
-        <img class="sm-photo" src="Profile_picture.jpg" alt="">
+        <img class="sm-photo" src="Profile_picture.jpg" alt="Profile photo">
+        <h2> Inthrayuth Mahaphol</h2>
         <h3>Researcher</h3>
         <p>
           I specialize in <span><a href="http://www.pdx.edu/engineering-technology-management/graduate-certificate-project-management">Project Management</a><span> and behind the scenes of related fields. In the past few years I had the pleasure to work with many key people from many countries in engineering and technology fields like Dr.Jetter, Dr.Sperry, Dr.Freiling, Dr.Khormaei, Mr.Shmueli, Mr.Busch, and many others.
@@ -112,11 +111,8 @@
 
       <div> <!-- start 4th textbox -->
         <h4>Like</h4>
-        <ul>
-          <li>Photography</li>
-          <li>Bicycle Builder</li>
-          <li>Metal Engraving</li>
-        </ul>
+          <p><img class="sm-photo" src="landscape.jpg" alt="landscape photo">
+          <strong> Landscape Photography  </strong><img class="xs-photo" src="bike.jpg" alt="bicycle photo"><strong> Bicycle Builder  </strong><img class="sm-photo" src="engraving.jpg" alt="engraving photo"><strong> Metal Engraving</strong></p>
       </div> <!-- end 4th textbox -->
 
     </div> <!-- end information .container -->
