added link to logo image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="container"> <!-- start header -->
-        <img class="xs-photo" src="logo.jpg" alt="Profile photo">
+        <a href="http://inthra.github.io/w1Fri-Landing-Page"><img class="xs-photo" src="logo.jpg" alt="Profile photo"></a>
         <ul class="nav nav-pills pull-right">
           <li><a href="#"><strong>Work</strong></a></li>
           <li><a href="mailto:zign.int@gmail.com"><strong>Contact</strong></a></li>
