--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 
         <div class="col-sm-3">
           <h3>Current Projects</h3>
+          <img class="img-responsive" src="programming.jpg" alt="Programming photo">
           <p>Working on developer skills</p>
           <ol>
             <li>HTML</li>
             <li>CSS</li>
+            <li>Java</li>
             <li>Java Script</li>
           </ol>
         </div>
@@ -63,11 +65,12 @@
           <h3>Future Projects</h3>
           <p>Would like to know</p>
           <ol>
-            <li>Java</li>
             <li>Android</li>
             <li>PHP</li>
             <li>R</li>
+            <li>Woodworking Skill</li>
           </ol>
+          <img class="img-responsive" src="woodworking.jpg" alt="Woodworkign photo">
         </div>
       </div> <!-- end 1st textbox -->
 
