modified Like Section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <p>Using basic html to develop webpage for a Cupcake Shop</p>
             </li>
             <li><a href="http://github.com/inthra/w1wed-boring/blob/master/boring-lecture.html">Lecture</a>
-              <p>Developing CSS by using Class</p>
+              <p>Developing CSS for html page by using Class</p>
             </li>
             <li><a href="http://github.com/inthra/w1wed-interior-decorator/blob/master/interior.html">Decorator</a>
               <p>Class "column" can help styling and fast editing</p>
@@ -114,8 +114,10 @@
 
       <div> <!-- start 4th textbox -->
         <h4>Like</h4>
-          <p><img class="sm-photo" src="landscape.jpg" alt="landscape photo">
-          <strong> Landscape Photography  </strong><img class="xs-photo" src="bike.jpg" alt="bicycle photo"><strong> Bicycle Builder  </strong><img class="sm-photo" src="engraving.jpg" alt="engraving photo"><strong> Metal Engraving</strong></p>
+          <p><img class="like-photo" src="landscape.jpg" alt="landscape photo">
+          <strong> Landscape Photography  </strong></p>
+          <p><img class="like-photo" src="bike.jpg" alt="bicycle photo"><strong> Bicycle Builder  </strong></p>
+          <p><img class="like-photo" src="engraving.jpg" alt="engraving photo"><strong> Metal Engraving</strong></p>
       </div> <!-- end 4th textbox -->
 
     </div> <!-- end information .container -->
