modified 1st textbox and added photos

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
 
     <div class="container"> <!-- start information .container -->
       <div class="row"> <!-- start 1st textbox -->
+        <div class="col-sm-3">
+          <h3>Current Projects</h3>
+          <img class="sm-photo" src="programming.png" alt="programming photo">
+          <p>Working on developer skills</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Java Script</li>
+          </ol>
+        </div>
+
         <div class="col-sm-6">
           <h3>HTML &amp CSS Projects</h3>
           <ul>
@@ -50,24 +61,14 @@
         </div>
 
         <div class="col-sm-3">
-          <h3>Current Projects</h3>
-          <p>Working on developer skills</p>
-          <ol>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Java Script</li>
-          </ol>
-        </div>
-
-        <div class="col-sm-3">
           <h3>Future Projects</h3>
           <p>Would like to know</p>
           <ol>
-            <li>Java</li>
             <li>Android</li>
             <li>PHP</li>
             <li>R</li>
           </ol>
+          <img class="sm-photo" src="r.jpg" alt="programming photo">
         </div>
       </div> <!-- end 1st textbox -->
 
