modified column in Like Section

--- a/index.html
+++ b/index.html
@@ -112,12 +112,22 @@
         </div>
       </div> <!-- end 3rd textbox -->
 
-      <div> <!-- start 4th textbox -->
+      <div class="row"> <!-- start 4th textbox -->
         <h4>Like</h4>
-          <p><img class="like-photo" src="landscape.jpg" alt="landscape photo">
-          <strong> Landscape Photography  </strong></p>
-          <p><img class="like-photo" src="bike.jpg" alt="bicycle photo"><strong> Bicycle Builder  </strong></p>
-          <p><img class="like-photo" src="engraving.jpg" alt="engraving photo"><strong> Metal Engraving</strong></p>
+        <div class="col-sm-4">
+          <p><strong>Landscape Photography</strong></p>
+          <img class="like-photo" src="landscape.jpg" alt="landscape photo">
+        </div>
+
+        <div class="col-sm-4">
+          <p><strong>Bicycle Builder</strong></p>
+          <img class="like-photo" src="bike.jpg" alt="bicycle photo">
+        </div>
+
+        <div class="col-sm-4">
+          <p><strong>Metal Engraving</strong></p>
+          <img class="like-photo" src="engraving.jpg" alt="engraving photo">
+        </div>
       </div> <!-- end 4th textbox -->
 
     </div> <!-- end information .container -->
